--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,10 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+**/.idea/modules.xml
+**/.idea/jarRepositories.xml
+**/.idea/compiler.xml
+**/.idea/libraries/
 *.iws
 *.iml
 *.ipr
@@ -36,3 +36,4 @@ build/
 
 ### Mac OS ###
 .DS_Store
+**/.DS_Store
